# sharedcuda_autotools

./: .gitignore  Makefile.in  README.md  configure  configure.ac  patch.sh
example/: make.sh
src/: Makefile.am  Makefile.in  dummyfile.cpp
